@@ -4970,7 +4970,7 @@ compare_field_literal (cb_tree e, int swap, cb_tree x, int op, struct cb_literal
 		 }
 		 if (lit_length > refmod_length) {
 			copy_file_line (e, CB_TREE(l), NULL);
-			if (cb_warn_constant_expr
+			if (cb_warn_opt_val[cb_warn_constant_expr]
 			&& !was_prev_warn (e->source_line, 2)) {
 				if (lit_length > f->size) {
 					cb_warning_x (cb_warn_constant_expr, e,
@@ -4999,7 +4999,7 @@ compare_field_literal (cb_tree e, int swap, cb_tree x, int op, struct cb_literal
 
 	if (alph_lit) {
 		copy_file_line (e, CB_TREE(l), NULL);
-		if (cb_warn_constant_expr
+		if (cb_warn_opt_val[cb_warn_constant_expr]
 		 && category == CB_CATEGORY_NUMERIC
 		 && !was_prev_warn (e->source_line, 3)) {
 			cb_warning_x (cb_warn_constant_expr, e,
@@ -5042,7 +5042,7 @@ compare_field_literal (cb_tree e, int swap, cb_tree x, int op, struct cb_literal
 	 && fscale >= 0
 	 && fscale < scale) {
 		copy_file_line (e, CB_TREE(l), NULL);
-		if (cb_warn_constant_expr
+		if (cb_warn_opt_val[cb_warn_constant_expr]
 		&& !was_prev_warn (e->source_line, 4)) {
 			cb_warning_x (cb_warn_constant_expr, e,
 						_("literal '%s' has more decimals than '%s'"),
@@ -5084,7 +5084,7 @@ compare_field_literal (cb_tree e, int swap, cb_tree x, int op, struct cb_literal
 		 * Then the literal value will never match the field contents
 		 */
 		copy_file_line (e, CB_TREE(l), NULL);
-		if (cb_warn_constant_expr
+		if (cb_warn_opt_val[cb_warn_constant_expr]
 		&& !was_prev_warn (e->source_line, 4)) {
 			cb_warning_x (cb_warn_constant_expr, e,
 				_("literal '%s' has more digits than '%s'"),
@@ -5116,7 +5116,7 @@ compare_field_literal (cb_tree e, int swap, cb_tree x, int op, struct cb_literal
 	 *       be dependent on compiler configuration flags;
 	 *       therefore we don't set cb_true/cb_false here
 	 */
-	if (cb_warn_constant_expr
+	if (cb_warn_opt_val[cb_warn_constant_expr]
 	 && (op == '<' || op == '[' || op == '>' || op == ']')) {
 		copy_file_line (e, CB_TREE(l), NULL);
 
@@ -5678,7 +5678,7 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 	}
 
 	if (relop == cb_true) {
-		if (cb_warn_constant_expr && warn_ok) {
+		if (cb_warn_opt_val[cb_warn_constant_expr] && warn_ok) {
 			if (rlit && llit) {
 				if (!was_prev_warn (e->source_line, warn_type)) {
 					cb_warning_x (cb_warn_constant_expr, e,
@@ -5696,7 +5696,7 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 		return cb_true;
 	}
 	if (relop == cb_false) {
-		if (cb_warn_constant_expr && warn_ok) {
+		if (cb_warn_opt_val[cb_warn_constant_expr] && warn_ok) {
 			if (rlit && llit) {
 				if (!was_prev_warn (e->source_line, 9 + warn_type)) {
 					cb_warning_x (cb_warn_constant_expr, e,
